--- a/src/App.css
+++ b/src/App.css
@@ -36,14 +36,20 @@ header nav{
 }
 .menu{
     position: fixed;
+    display: grid;
     background-color: var(--primario);
-    width: 60vw;
+    width: 100vw;
     height: calc(100vh - 3rem);
     top: 3rem;
     left: 0;
     padding: .5rem 1.5rem;
     transform: translateX(-100vw);
     transition: all .4s linear;
+    overflow-y: scroll;
+}
+.subtitulo{
+    text-align: center;
+    margin: 1.5rem 0;
 }
 .mostrar-menu{
     transform: translateX(0);
@@ -55,7 +61,6 @@ header nav ul li{
     display: flex;
     gap: 5px;
     list-style: none;
-    margin: 20px 0;
     align-items: center;
 }
 header nav ul li a{
@@ -164,6 +169,7 @@ header nav ul li a:hover{
     background-color: var(--primario);
     color: #ffffff;
     font-size: 1rem;
+    margin-top: 1rem;
 }
 .btn_cierre{
     margin: auto;
