--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Dosis&family=Josefin+Sans&family=Merriweather&family=Montserrat:ital@0;1&family=Ubuntu&display=swap');
+@import url('./stylesSheets/colors.css');
+@import url('./stylesSheets/fonts.css');
+
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'montserrat';
 }
 
 :root {
@@ -22,7 +24,8 @@ header {
     position: sticky;
     top: 0;
     left: 0;
-    color: var(--blanco)
+    color: var(--blanco);
+    z-index: 900;
 }
 
 header nav {
@@ -102,7 +105,6 @@ header nav ul li a:hover {
     border-radius: 1rem;
     padding: 2.5rem 1rem;
     text-align: center;
-
 }
 
 .input-form {
