add function of change of colors and fonts

--- a/src/App.css
+++ b/src/App.css
@@ -320,6 +320,6 @@ header nav ul li a:hover {
 
 .section-cierre ul,
 .list-registered ul,
-.list-customersDeleted {
+.list-customersDeleted ul {
     padding: 0;
 }
