--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,12 @@ header nav {
     z-index: 900;
 }
 
+header nav h4 {
+    width: 100%;
+    text-align: center;
+    margin: 0;
+}
+
 .icono-menu {
     cursor: pointer;
     transition: all .5s linear;
@@ -323,3 +329,32 @@ header nav ul li a:hover {
 .list-customersDeleted ul {
     padding: 0;
 }
+
+.profile-form {
+    display: grid;
+    padding: 1rem;
+    gap: 1rem;
+}
+
+.profile-fields {
+    width: 100%;
+    height: 42px;
+    padding: .5rem;
+    border: .5px solid #00000040;
+    border-radius: .5rem;
+}
+
+.btn-profile {
+    margin: auto;
+    padding: .2rem .5rem;
+    width: 100%;
+    height: 39px;
+    background-color: var(--primario);
+    border: transparent;
+    color: var(--blanco);
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    border-radius: .5rem;
+}
+
